objects/chargebeeapps__CB_Pricing_Tiers__c.object
<CustomObject>
    <fields>
        <fullName>chargebeeapps__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Lower_Limit__c</fullName>
        <label>Lower Limit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__PriceBookEntryId__c</fullName>
        <label>PriceBookEntryId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipName>CB_PriceBookEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>CB_PriceBookEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Upper_Limit__c</fullName>
        <label>Upper Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CB Pricing Tier</label>
    <nameField>
        <label>CB Pricing Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Pricing Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>